syntax = "proto3";

package com.apixio.predictions.ma;

import "com/apixio/predictions/PredictionCommon.proto";

option java_outer_classname = "MedicareAdvantage";

message MedicareAdvantagePrediction
{
     com.apixio.predictions.predictionbin.Code code = 1;
     com.apixio.predictions.predictionbin.Source source = 2;

     com.apixio.predictions.predictionbin.DateOfService dateOfService = 3;

     bool isInferred = 4;
}